--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "hapi-direct",
   "version": "1.0.0",
-  "description": "Hapi route controller validator.",
+  "description": "Dynamic Hapi route handling through directory structure",
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "posttest": "istanbul check-coverage --statement 80 --line 80 --branch 80 --function 80",
+    "posttest": "istanbul check-coverage --statement 90 --line 90 --branch 90 --function 90",
     "lint": "eslint ./"
   },
   "keywords": [
     "hapi",
     "routes",
-    "preroute",
+    "route",
+    "routing",
+    "handlers",
     "controller"
   ],
   "author": "Sean Grasso <sean.grasso@gmail.com> (http://www.seangrasso.com/)",
@@ -20,9 +22,9 @@
     "boom": "3.1.x"
   },
   "devDependencies": {
-    "eslint": "3.4.0",
-    "istanbul": "0.4.2",
-    "mocha": "2.4.5"
+    "eslint": "3.4.x",
+    "istanbul": "0.4.x",
+    "mocha": "2.4.x"
   },
   "repository": {
     "type": "git",
