--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
-language: 
-  node_js
+language: node_js
+
 node_js:
+  - 4
+  - 5
   - 6
-branches:
-  only:
-    - master
+
+after_success:
+    - npm test
