--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-direct",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "Dynamic Hapi route handling through directory structure",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "node": ">=4.0.0"
   },
   "dependencies": {
+    "async": "^2.6.1",
     "boom": "5.2.x"
   },
   "devDependencies": {
