--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     'extends': 'eslint:recommended',
 	'parserOptions': {
-		'ecmaVersion': 6
+		'ecmaVersion': 8,
+		'sourceType': 'module'
 	},
 	'rules': {
 		// enable additional rules
